# sockq-server

./: env.sh  maintest.py  tests.py
authentication-service/: requirements.txt  setup.cfg
authentication-service/src/: migrate.py  service.py
enterprise-service-bus/: requirements.txt  setup.cfg
enterprise-service-bus/src/: service.py
user-data-service/: pyproject.toml  requirements.txt  setup.cfg
user-data-service/src/: service.py
user-messaging-service/: pyproject.toml  setup.cfg  setup.py
user-messaging-service/src/: esb_simulator.py  migrate.py  service.py  test.py
