[metadata]
name = authentication-service
description = A service that deals with authentication in the SockQ system
author = Krizen Knoz
license  = GPL-3.0
license_file = LICENSE
platforms = any # unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    authentication-service
install_requires = 
    Flask==2.2.1
    Flask-RESTful==0.3.9
    Flask-SQLAlchemy==2.5.1
package_dir =
    src
python_requires = >=3.10.4
